--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="keywords" content="HTML, CSS, JavaScript" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-
-    <script
-      src="https://kit.fontawesome.com/93b32f94da.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Password Generator</title>
   </head>
   <body>
@@ -47,7 +40,7 @@
       </div>
       <button class="btn btn-large" id="generate">Generate Password</button>
     </div>
-
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/93b32f94da.js" crossorigin="anonymous"></script>
   </body>
 </html>
